--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <html>
-    <body></body>
+    <body>
+        <header>
+            <h1>
+                GIT
+            </h1>
+        </header>
+    </body>
 </html>
