--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
             <h1>Git</h1>
         </header>
         <ul>
-            
+            <li>
+                Git이란?
+            </li>
         </ul>
     </body>
 </html>
