--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
             <h1>Git</h1>
         </header>
         <ul>
-            <li>
-                Git이란?
-            </li>
-            <li>
-                버전
-            </li>
+            <li>Git이란?</li>
+            <li>버전</li>
         </ul>
     </body>
 </html>
